--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reestructurando-nuestro-servidor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemon": "^2.0.21",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   }
